--- a/About/index.html
+++ b/About/index.html
@@ -10,29 +10,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous" defer></script>
     <script src="assets/js/script .js" defer></script>
 </head>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <nav>
+    <input type="checkbox" id="sidebar-active">
+       <label for="sidebar-active" class="open-sidebar-button">
+            <span class="material-symbols-outlined">menu</span>
+        </label>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item ">
-        <a class="nav-link" href="/iremblog/index.html">Anasayfa<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Hakkımızda</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="/blog.html">Blog</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/Contact kopyası/index.html">İletişim</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+        <label id="overlay" for="sidebar-active"></label>
+        <div class="links-container">
+          <label for="sidebar-active" class="close-sidebar-button">
+            <span class="material-symbols-outlined" >close</span>
+          </label>
+
+          <a class="home-link" href="index.html">Hakkımızda</a>
+          <a href="/iremblog/index.html">Anasayfa</a>
+          <a href="/blog.html">Blog</a>
+          <a href="/Contact kopyası/index.html">İletişim</a>
+
+        </div>
+  </nav>
 
 
 
